WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33438
http/tests/plugins tests print "Unhandled variable" to stderr under Qt
https://bugs.webkit.org/show_bug.cgi?id=33438
Summary
http/tests/plugins tests print "Unhandled variable" to stderr under Qt
Eric Seidel (no email)
Reported
2010-01-09 15:38:59 PST
http/tests/plugins tests print "Unhandled variable" to stderr under Qt Somehow i don't think this is expected behavior.
http://build.webkit.org/results/Qt%20Linux%20Release/r53034%20(5781)/results.html
Tests that had stderr output: http/tests/plugins/get-url.html stderr http/tests/plugins/geturlnotify-from-npp-destroystream.html stderr http/tests/plugins/interrupted-get-url.html stderr
Attachments
Proposed patch
(1.42 KB, patch)
2010-11-14 11:27 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tor Arne Vestbø
Comment 1
2010-03-10 06:28:54 PST
Please follow the QtWebKit bug reporting guidelines when reporting bugs. See
http://trac.webkit.org/wiki/QtWebKitBugs
Specifically: - The 'QtWebKit' component should only be used for bugs/features in the public QtWebKit API layer, not to signify that the bug is specific to the Qt port of WebKit
http://trac.webkit.org/wiki/QtWebKitBugs#Component
- Add the keyword 'Qt' to signal that it's a Qt-related bug
http://trac.webkit.org/wiki/QtWebKitBugs#Keywords
Andreas Kling
Comment 2
2010-03-16 05:25:51 PDT
The fprintf() can be found in WebKitTools/DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp
Andreas Kling
Comment 3
2010-11-14 11:27:15 PST
Created
attachment 73855
[details]
Proposed patch Patch to silence this warning (just like the "vanilla" test plugin does.)
Andreas Kling
Comment 4
2010-11-14 11:39:54 PST
Comment on
attachment 73855
[details]
Proposed patch Clearing flags on attachment: 73855 Committed
r71985
: <
http://trac.webkit.org/changeset/71985
>
Andreas Kling
Comment 5
2010-11-14 11:40:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug